[refactor] Category 목록 조회 API 응답 Wrapper 적용 및 DTO 구조 개선